fixed gap in side bar

--- a/query.css
+++ b/query.css
@@ -6,7 +6,7 @@
     height: 100%;
     background-color: #f0f0f0;
     padding: 10px;
-    margin-right: 210px;
+    margin-right: 200px;
     box-sizing: border-box;
     overflow: auto;
 }
